// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DDL builders > mysql: addColumn 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` ADD COLUMN \`n\` INT NULL DEFAULT (0) AFTER \`id\`",
]
`;

exports[`DDL builders > mysql: addForeignKey 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` ADD CONSTRAINT \`fk_t_user\` FOREIGN KEY (\`user_id\`) REFERENCES \`db\`.\`us\`\`ers\` (\`id\`) ON UPDATE CASCADE ON DELETE SET NULL",
]
`;

exports[`DDL builders > mysql: addIndex 1`] = `
[
  "CREATE UNIQUE INDEX \`idx_t_a_b\` ON \`db\`.\`t\` (\`a\`, \`b\`)",
]
`;

exports[`DDL builders > mysql: alterIndex 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` DROP INDEX \`idx_t_a_b\`, ADD INDEX \`idx_t_a\` (\`a\`) USING BTREE",
]
`;

exports[`DDL builders > mysql: copyDatabase 1`] = `
[
  "CREATE DATABASE \`new"db\`\`x\` COLLATE utf8mb4_0900_ai_ci",
  "CREATE TABLE \`new"db\`\`x\`.\`we"ird\`\`t\` LIKE \`old"db\`\`x\`.\`we"ird\`\`t\`",
  "INSERT INTO \`new"db\`\`x\`.\`we"ird\`\`t\` (\`id\`, \`n"m\`\`e\`) SELECT \`id\`, \`n"m\`\`e\` FROM \`old"db\`\`x\`.\`we"ird\`\`t\`",
  "CREATE TABLE \`new"db\`\`x\`.\`all_generated\` LIKE \`old"db\`\`x\`.\`all_generated\`",
]
`;

exports[`DDL builders > mysql: copyTable 1`] = `
[
  "CREATE TABLE \`db\`.\`t_copy\` LIKE \`db\`.\`t\`",
  "INSERT INTO \`db\`.\`t_copy\` (\`id\`, \`na\`\`me\`) SELECT \`id\`, \`na\`\`me\` FROM \`db\`.\`t\`",
]
`;

exports[`DDL builders > mysql: createDatabase 1`] = `
[
  "CREATE DATABASE \`new"db\`\`x\`",
]
`;

exports[`DDL builders > mysql: createEvent 1`] = `
[
  "CREATE EVENT \`db\`.\`ev\`\`x\` ON SCHEDULE EVERY 1 DAY STARTS '2026-01-01 00:00:00' ON COMPLETION NOT PRESERVE ENABLE COMMENT 'prune ''old'' logs' DO DELETE FROM logs WHERE at < NOW() - INTERVAL 30 DAY",
]
`;

exports[`DDL builders > mysql: createRoutine 1`] = `
[
  "CREATE FUNCTION \`db\`.\`add\`\`o"ne\`(\`n\` INT) RETURNS INT COMMENT 'adds ''one''' DETERMINISTIC RETURN n + 1",
]
`;

exports[`DDL builders > mysql: createSchema 1`] = `
[
  "CREATE DATABASE \`new"schema\`",
]
`;

exports[`DDL builders > mysql: createTable 1`] = `
[
  "CREATE TABLE \`db\`.\`we"ird\`\`tbl\` (
  \`id\` INT NOT NULL AUTO_INCREMENT,
  \`name\` VARCHAR(100) NULL DEFAULT 'it''s \\\\ ok' COMMENT 'the "name"',
  \`created\` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (\`id\`)
)",
]
`;

exports[`DDL builders > mysql: createTrigger 1`] = `
[
  "CREATE TRIGGER \`db\`.\`tr\`\`g\` BEFORE INSERT ON \`db\`.\`users\` FOR EACH ROW BEGIN
  SET NEW.name = TRIM(NEW.name);
END",
]
`;

exports[`DDL builders > mysql: createView 1`] = `
[
  "CREATE OR REPLACE VIEW \`db\`.\`v\`\`w"x\` AS SELECT id, name FROM users WHERE id > 1",
]
`;

exports[`DDL builders > mysql: disableEvent 1`] = `
[
  "ALTER EVENT \`db\`.\`ev\`\`x\` DISABLE",
]
`;

exports[`DDL builders > mysql: dropColumn 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` DROP COLUMN \`n\`",
]
`;

exports[`DDL builders > mysql: dropColumns 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` DROP COLUMN \`a\`, DROP COLUMN \`b\`",
]
`;

exports[`DDL builders > mysql: dropDatabase 1`] = `
[
  "DROP DATABASE \`new"db\`\`x\`",
]
`;

exports[`DDL builders > mysql: dropEvent 1`] = `
[
  "DROP EVENT \`db\`.\`ev\`\`x\`",
]
`;

exports[`DDL builders > mysql: dropForeignKey 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` DROP FOREIGN KEY \`fk_t_user\`",
]
`;

exports[`DDL builders > mysql: dropIndex 1`] = `
[
  "DROP INDEX \`idx_t_a_b\` ON \`db\`.\`t\`",
]
`;

exports[`DDL builders > mysql: dropTable 1`] = `
[
  "DROP TABLE \`db\`.\`t\`",
]
`;

exports[`DDL builders > mysql: dropTables 1`] = `
[
  "DROP TABLE \`db\`.\`t\`, \`db\`.\`we"ird\`\`tbl\`",
]
`;

exports[`DDL builders > mysql: enableEvent 1`] = `
[
  "ALTER EVENT \`db\`.\`ev\`\`x\` ENABLE",
]
`;

exports[`DDL builders > mysql: maintainTable 1`] = `
[
  "ANALYZE TABLE \`db\`.\`t\`",
]
`;

exports[`DDL builders > mysql: modifyColumn 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` CHANGE COLUMN \`n\` \`n2\` BIGINT COLLATE utf8mb4_bin NOT NULL ON UPDATE CURRENT_TIMESTAMP COMMENT 'renamed'",
]
`;

exports[`DDL builders > mysql: modifyColumns 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` MODIFY COLUMN \`a\` BIGINT NOT NULL, CHANGE COLUMN \`b\` \`b2\` TEXT NULL",
]
`;

exports[`DDL builders > mysql: moveTable 1`] = `
[
  "RENAME TABLE \`db\`.\`we"ird\`\`tbl\` TO \`arch\`\`ive"\`.\`we"ird\`\`tbl\`",
]
`;

exports[`DDL builders > mysql: renameDatabase 1`] = `
[
  "CREATE DATABASE \`new"db\`\`x\` COLLATE utf8mb4_0900_ai_ci",
  "RENAME TABLE \`old"db\`\`x\`.\`we"ird\`\`t\` TO \`new"db\`\`x\`.\`we"ird\`\`t\`, \`old"db\`\`x\`.\`users\` TO \`new"db\`\`x\`.\`users\`",
]
`;

exports[`DDL builders > mysql: renameIndex 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` RENAME INDEX \`idx_t_a_b\` TO \`idx_t_ab\`",
]
`;

exports[`DDL builders > mysql: renameTable 1`] = `
[
  "RENAME TABLE \`db\`.\`t\` TO \`db\`.\`we"ird\`\`new\`",
]
`;

exports[`DDL builders > mysql: reorderColumns 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` MODIFY COLUMN \`b\` INT NULL FIRST, MODIFY COLUMN \`a\` INT NULL AFTER \`b\`",
]
`;

exports[`DDL builders > mysql: replaceInColumn 1`] = `
[
  "UPDATE \`db\`.\`users\` SET \`na\`\`me"\` = REPLACE(\`na\`\`me"\`, 'it''s', '%_\\\\') WHERE CAST(REPLACE(\`na\`\`me"\`, 'it''s', '%_\\\\') AS BINARY) <> CAST(\`na\`\`me"\` AS BINARY)",
]
`;

exports[`DDL builders > mysql: setPrimaryKey 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` DROP PRIMARY KEY, ADD PRIMARY KEY (\`a\`, \`b\`)",
]
`;

exports[`DDL builders > mysql: setTableOptions 1`] = `
[
  "ALTER TABLE \`db\`.\`t\` COMMENT = 'it''s'",
]
`;

exports[`DDL builders > mysql: truncateTable 1`] = `
[
  "TRUNCATE TABLE \`db\`.\`t\`",
]
`;

exports[`DDL builders > mysql: truncateTables 1`] = `
[
  "TRUNCATE TABLE \`db\`.\`t\`",
  "TRUNCATE TABLE \`db\`.\`we"ird\`\`tbl\`",
]
`;

exports[`DDL builders > postgres: addColumn 1`] = `
[
  "ALTER TABLE "app"."t" ADD COLUMN "n" INT DEFAULT 0",
]
`;

exports[`DDL builders > postgres: addForeignKey 1`] = `
[
  "ALTER TABLE "app"."t" ADD CONSTRAINT "fk_t_user" FOREIGN KEY ("user_id") REFERENCES "app"."us\`ers" ("id") ON UPDATE CASCADE ON DELETE SET NULL",
]
`;

exports[`DDL builders > postgres: addIndex 1`] = `
[
  "CREATE UNIQUE INDEX "idx_t_a_b" ON "app"."t" ("a", "b")",
]
`;

exports[`DDL builders > postgres: alterIndex 1`] = `
[
  "BEGIN",
  "DROP INDEX "app"."idx_t_a_b"",
  "CREATE INDEX "idx_t_a" ON "app"."t" USING btree ("a")",
  "COMMIT",
]
`;

exports[`DDL builders > postgres: copyDatabase 1`] = `
[
  "SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname = 'old"db\`x' AND application_name = 'tsmyadmin' AND usename = session_user AND state = 'idle' AND pid <> pg_backend_pid()",
  "CREATE DATABASE "new""db\`x" TEMPLATE "old""db\`x"",
]
`;

exports[`DDL builders > postgres: copyTable 1`] = `
[
  "CREATE TABLE "app"."t_copy" (LIKE "app"."t" INCLUDING ALL)",
  "INSERT INTO "app"."t_copy" ("id", "na\`me") OVERRIDING SYSTEM VALUE SELECT "id", "na\`me" FROM "app"."t"",
  "CREATE SEQUENCE "app"."t_copy_na\`me_seq" OWNED BY "app"."t_copy"."na\`me"",
  "ALTER TABLE "app"."t_copy" ALTER COLUMN "na\`me" SET DEFAULT nextval('"app"."t_copy_na\`me_seq"'::regclass)",
  "SELECT setval(s.seqrelid, CASE WHEN s.seqincrement > 0 THEN GREATEST(m.max_id, s.seqmin, COALESCE(pg_sequence_last_value(s.seqrelid), s.seqmin)) ELSE LEAST(m.min_id, s.seqmax, COALESCE(pg_sequence_last_value(s.seqrelid), s.seqmax)) END, CASE WHEN s.seqincrement > 0 THEN m.max_id >= s.seqmin ELSE m.min_id <= s.seqmax END OR pg_sequence_last_value(s.seqrelid) IS NOT NULL) FROM pg_sequence s CROSS JOIN LATERAL (SELECT (SELECT MAX("id")::bigint FROM "app"."t_copy" WHERE "id" BETWEEN s.seqmin AND s.seqmax) AS max_id, (SELECT MIN("id")::bigint FROM "app"."t_copy" WHERE "id" BETWEEN s.seqmin AND s.seqmax) AS min_id) m WHERE s.seqrelid = pg_get_serial_sequence('"app"."t_copy"', 'id')::regclass AND m.max_id IS NOT NULL",
  "SELECT setval(s.seqrelid, CASE WHEN s.seqincrement > 0 THEN GREATEST(m.max_id, s.seqmin, COALESCE(pg_sequence_last_value(s.seqrelid), s.seqmin)) ELSE LEAST(m.min_id, s.seqmax, COALESCE(pg_sequence_last_value(s.seqrelid), s.seqmax)) END, CASE WHEN s.seqincrement > 0 THEN m.max_id >= s.seqmin ELSE m.min_id <= s.seqmax END OR pg_sequence_last_value(s.seqrelid) IS NOT NULL) FROM pg_sequence s CROSS JOIN LATERAL (SELECT (SELECT MAX("na\`me")::bigint FROM "app"."t_copy" WHERE "na\`me" BETWEEN s.seqmin AND s.seqmax) AS max_id, (SELECT MIN("na\`me")::bigint FROM "app"."t_copy" WHERE "na\`me" BETWEEN s.seqmin AND s.seqmax) AS min_id) m WHERE s.seqrelid = pg_get_serial_sequence('"app"."t_copy"', 'na\`me')::regclass AND m.max_id IS NOT NULL",
]
`;

exports[`DDL builders > postgres: createDatabase 1`] = `
[
  "CREATE DATABASE "new""db\`x"",
]
`;

exports[`DDL builders > postgres: createRoutine 1`] = `
[
  "CREATE FUNCTION "app"."add\`o""ne"(IN "n" INT) RETURNS INT LANGUAGE sql AS $body$
RETURN n + 1;
$body$",
  "COMMENT ON FUNCTION "app"."add\`o""ne"(IN "n" INT) IS 'adds ''one'''",
]
`;

exports[`DDL builders > postgres: createSchema 1`] = `
[
  "CREATE SCHEMA "new""schema"",
]
`;

exports[`DDL builders > postgres: createTable 1`] = `
[
  "CREATE TABLE "app"."we""ird\`tbl" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
  "name" VARCHAR(100) DEFAULT 'it''s \\ ok',
  "created" TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY ("id")
)",
  "COMMENT ON COLUMN "app"."we""ird\`tbl"."name" IS 'the "name"'",
]
`;

exports[`DDL builders > postgres: createTrigger 1`] = `
[
  "CREATE FUNCTION "app"."tr\`g_fn"() RETURNS trigger LANGUAGE plpgsql AS $body$
BEGIN
  SET NEW.name = TRIM(NEW.name);
END;
$body$",
  "CREATE TRIGGER "tr\`g" BEFORE INSERT ON "app"."users" FOR EACH ROW EXECUTE FUNCTION "app"."tr\`g_fn"()",
]
`;

exports[`DDL builders > postgres: createView 1`] = `
[
  "CREATE OR REPLACE VIEW "app"."v\`w""x" AS SELECT id, name FROM users WHERE id > 1",
]
`;

exports[`DDL builders > postgres: dropColumn 1`] = `
[
  "ALTER TABLE "app"."t" DROP COLUMN "n"",
]
`;

exports[`DDL builders > postgres: dropColumns 1`] = `
[
  "ALTER TABLE "app"."t" DROP COLUMN "a", DROP COLUMN "b"",
]
`;

exports[`DDL builders > postgres: dropDatabase 1`] = `
[
  "DROP DATABASE "new""db\`x" WITH (FORCE)",
]
`;

exports[`DDL builders > postgres: dropForeignKey 1`] = `
[
  "ALTER TABLE "app"."t" DROP CONSTRAINT "fk_t_user"",
]
`;

exports[`DDL builders > postgres: dropIndex 1`] = `
[
  "DROP INDEX "app"."idx_t_a_b"",
]
`;

exports[`DDL builders > postgres: dropTable 1`] = `
[
  "DROP TABLE "app"."t"",
]
`;

exports[`DDL builders > postgres: dropTables 1`] = `
[
  "DROP TABLE "app"."t", "app"."we""ird\`tbl"",
]
`;

exports[`DDL builders > postgres: maintainTable 1`] = `
[
  "ANALYZE "app"."t"",
]
`;

exports[`DDL builders > postgres: modifyColumn 1`] = `
[
  "ALTER TABLE "app"."t" RENAME COLUMN "n" TO "n2"",
  "ALTER TABLE "app"."t" ALTER COLUMN "n2" TYPE BIGINT COLLATE "utf8mb4_bin"",
  "ALTER TABLE "app"."t" ALTER COLUMN "n2" SET NOT NULL",
  "ALTER TABLE "app"."t" ALTER COLUMN "n2" DROP DEFAULT",
  "COMMENT ON COLUMN "app"."t"."n2" IS 'renamed'",
]
`;

exports[`DDL builders > postgres: modifyColumns 1`] = `
[
  "BEGIN",
  "ALTER TABLE "app"."t" ALTER COLUMN "a" TYPE BIGINT",
  "ALTER TABLE "app"."t" ALTER COLUMN "a" SET NOT NULL",
  "ALTER TABLE "app"."t" ALTER COLUMN "a" DROP DEFAULT",
  "ALTER TABLE "app"."t" RENAME COLUMN "b" TO "b2"",
  "ALTER TABLE "app"."t" ALTER COLUMN "b2" TYPE TEXT",
  "ALTER TABLE "app"."t" ALTER COLUMN "b2" DROP NOT NULL",
  "ALTER TABLE "app"."t" ALTER COLUMN "b2" DROP DEFAULT",
  "COMMIT",
]
`;

exports[`DDL builders > postgres: moveTable 1`] = `
[
  "ALTER TABLE "app"."we""ird\`tbl" SET SCHEMA "arch\`ive"""",
]
`;

exports[`DDL builders > postgres: renameDatabase 1`] = `
[
  "SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname = 'old"db\`x' AND application_name = 'tsmyadmin' AND usename = session_user AND state = 'idle' AND pid <> pg_backend_pid()",
  "ALTER DATABASE "old""db\`x" RENAME TO "new""db\`x"",
]
`;

exports[`DDL builders > postgres: renameIndex 1`] = `
[
  "ALTER INDEX "app"."idx_t_a_b" RENAME TO "idx_t_ab"",
]
`;

exports[`DDL builders > postgres: renameTable 1`] = `
[
  "ALTER TABLE "app"."t" RENAME TO "we""ird\`new"",
]
`;

exports[`DDL builders > postgres: replaceInColumn 1`] = `
[
  "UPDATE "app"."users" SET "na\`me""" = replace("na\`me""", 'it''s', '%_\\') WHERE replace("na\`me""", 'it''s', '%_\\') IS DISTINCT FROM "na\`me"""",
]
`;

exports[`DDL builders > postgres: setPrimaryKey 1`] = `
[
  "ALTER TABLE "app"."t" DROP CONSTRAINT "t_pkey", ADD PRIMARY KEY ("a", "b")",
]
`;

exports[`DDL builders > postgres: setTableOptions 1`] = `
[
  "COMMENT ON TABLE "app"."t" IS 'it''s'",
]
`;

exports[`DDL builders > postgres: truncateTable 1`] = `
[
  "TRUNCATE TABLE "app"."t"",
]
`;

exports[`DDL builders > postgres: truncateTables 1`] = `
[
  "TRUNCATE TABLE "app"."t", "app"."we""ird\`tbl"",
]
`;
